# user-splitter_bot

./: .env.example  .flake8  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  Readme.md  alembic.ini  pyproject.toml  setup.py
docker_compose/: app.yaml  storages.yaml
src/: web.py
src/api/internal/: routers.py
src/api/internal/views/: probes.py
src/bot/: bot.py  middlewares.py  utils.py
src/bot/handlers/: add_to_group.py  join_group.py  start_handler.py
src/bot/messages/: add_to_group.py  base.py  join_group.py  start.py
src/core/: containers.py
src/core/configs/: __init__.py  database.py  general.py  logging.py  telegram.py
src/domain/entities/: groups.py  users.py
src/domain/services/: groups.py  healthcheck.py  users.py
src/gateways/postgresql/: database.py
src/gateways/postgresql/migrations/: env.py
src/gateways/postgresql/migrations/versions/: 2024_08_07_1408-eda68b0cb216_usermodel.py  2024_08_08_1439-6b08c223fa83_create_usermodel.py  2024_08_09_1644-7ca5810aef85_groupmodel.py  2024_08_10_1728-1e01630bf789_create_groupmodel_and_usermodel.py
src/gateways/postgresql/models/: __init__.py  base.py  groups.py  users.py
src/gateways/postgresql/repositories/: base.py  groups.py  users.py
src/services/: groups.py  healthcheck.py  users.py
